--- a/src/app/pages/dashboard/gameMaster/gameMaster.component.html
+++ b/src/app/pages/dashboard/gameMaster/gameMaster.component.html
@@ -5,15 +5,38 @@
           <div class="row text-center">
                <div class="col">
                     <h3>EXPERIENCE</h3>
-                    <p>200 EXP</p>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-flame" width="44"
+                              height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                              stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                              <path
+                                   d="M12 12c2 -2.96 0 -7 -1 -8c0 3.038 -1.773 4.741 -3 6c-1.226 1.26 -2 3.24 -2 5a6 6 0 1 0 12 0c0 -1.532 -1.056 -3.94 -2 -5c-1.786 3 -2.791 3 -4 2z" />
+                         </svg>{{Experience}}</p>
                </div>
                <div class="col">
                     <h3>BADGES</h3>
-                    <p>1</p>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trophy" width="5"
+                              height="5" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                              stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                              <path d="M8 21l8 0" />
+                              <path d="M12 17l0 4" />
+                              <path d="M7 4l10 0" />
+                              <path d="M17 4v8a5 5 0 0 1 -10 0v-8" />
+                              <path d="M5 9m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+                              <path d="M19 9m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+                         </svg>{{Badges}}</p>
                </div>
                <div class="col">
-                    <h3>LEVEL</h3>
-                    <p>200 EXP</p>
+                    <h3>GAMES WON</h3>
+                    <p><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-award" width="44"
+                              height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                              stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                              <path d="M12 9m-6 0a6 6 0 1 0 12 0a6 6 0 1 0 -12 0" />
+                              <path d="M12 15l3.4 5.89l1.598 -3.233l3.598 .232l-3.4 -5.889" />
+                              <path d="M6.802 12l-3.4 5.89l3.598 -.233l1.598 3.232l3.4 -5.889" />
+                         </svg>{{GamesWon}}</p>
                </div>
           </div>
 
@@ -26,3 +49,12 @@
 <hr>
 <br>
 <router-outlet></router-outlet>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae consequuntur delectus, soluta perspiciatis incidunt
+exercitationem necessitatibus minima reprehenderit veniam culpa possimus qui iusto, voluptas rem in asperiores quis
+consectetur voluptatum! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero numquam, ab nulla cum dolorem
+voluptatem eligendi assumenda adipisci quo reprehenderit, possimus beatae aspernatur impedit harum laboriosam eos
+necessitatibus minima. Facilis suscipit iusto sapiente cum facere, soluta, ratione libero, vel voluptatibus commodi
+nostrum repellat obcaecati recusandae reprehenderit! Explicabo corporis in id maiores, dolor consequatur sunt beatae
+aliquam nemo delectus nostrum ipsum obcaecati quo reprehenderit esse doloribus! Ipsum ullam dignissimos minus molestiae
+placeat. Suscipit laboriosam, tempora optio consequatur animi officiis ut accusamus eos dolorem reiciendis! Dolore iste
+corrupti neque minus mollitia porro, qui numquam maiores veritatis cupiditate ad molestiae, dolorem sunt laborum.
