--- a/src/app/pages/dashboard/gameMaster/logros/logros.component.html
+++ b/src/app/pages/dashboard/gameMaster/logros/logros.component.html
@@ -11,11 +11,11 @@
           </div>
           <div class="d-flex gap-4 text-center">
                <div>
-                    <h4>PROGRESO DEL LOGRO</h4>
+                    <h4>BADGE PROGRESS</h4>
                     <b><span class=" text-center">{{logro.completed}}</span></b>
                </div>
                <div>
-                    <h4>EXPERIENCIA OBTENIDA</h4>
+                    <h4>EXPERIENCE GAINED</h4>
                     <b><span class="text-center">{{logro.experience}} EXP</span></b>
                </div>
           </div>
